2001-09-07  Philippe Elie  <ph_e@club-internet.fr>

	* oprofile.c: remove /proc/.../cpu_type. Check if user
	  mode cpu type detection is identical to module cpu type
	* op_events.h:
	* op_events.c: add op_get_cpu_type(). script can get cpu_type
	  by op_help --get-cpu-type
	* gui/oprofile: use it	
	* dae/oprofiled.c: ditto
	* dae/op_start: ditto, pass expected_cpu_type to module
	* doc/oprofile.sgml: update
	* doc/oprofile.1.in: update
	* pp/oprofpp.c: get cpu_type from samples file
	* pp/opf_filter.cpp: get cpu type from stdin

2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* dae/opd_proc.c: use j not i in msync !
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: more sanity checking of options
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: update a bit
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* <most files>: make op_nr_counters a var (no pp support for > 2 yet)
	 
	* dae/oprofiled.c: don't print help when counter event etc. are wrong
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c: use MODULE_LICENSE
 
2001-09-06  John Levon  <moz@compsoc.man.ac.uk>

	* op_user.h: add missing prototype

	* dae/op_start: fix counter extraction
 
2001-09-05  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.c: fix a few corner case, cleanup.
	* dae/opd_proc: ditto.	

	* dae/op_start: better handling of counter number

	* dae/opd_proc: minor change.

	* op_user.h: enable support for four counters
	* oprofile.c: ditto. Split functions

	* op_events.c: expose op_get_cpu_type_str(int) to world.

2001-09-04  John Levon  <moz@compsoc.man.ac.uk>

	* oprofile.h:
	* oprofile.c: don't restore delivery mode to LVTPC (causes
	APIC error on SMP). Fix for silly sem hang with do_dump
 
2001-09-04  John Levon  <moz@compsoc.man.ac.uk>

	* dae/op_start: fix typo bug
 
2001-09-04  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: some small tidies
 
2001-09-04  John Levon  <moz@compsoc.man.ac.uk>
