@@ -1,4 +1,4 @@
-/* $Id: oprofile.h,v 1.50 2001/09/06 18:13:28 movement Exp $ */
+/* $Id: oprofile.h,v 1.51 2001/09/12 01:22:41 movement Exp $ */
 /* COPYRIGHT (C) 2000 THE VICTORIA UNIVERSITY OF MANCHESTER and John Levon
  * This program is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License as published by the Free
@@ -171,6 +171,8 @@ asmlinkage void op_nmi(void);
 
 struct _descr { u16 limit; u32 base; } __attribute__((__packed__));
 struct _idt_descr { u32 a; u32 b; } __attribute__((__packed__));
+
+#define op_cpu_id() (cpu_number_map(smp_processor_id()))
 
 /* we can't unload safely on SMP */
 #ifdef CONFIG_SMP
